# AutoVersioning

./: CMakeLists.txt
src/: main.cpp
ver/: vergen.sh
